fixed alignment and made transparent entry box

--- a/login-2.css
+++ b/login-2.css
@@ -6,10 +6,14 @@ body {
 }
 body {background-color: rgba(251, 251, 251, 255);}
 
+h1 {text-align: center;}
+
 .container {
-    min-width: 100vw;
+    
     min-height: 100vh;
+    min-width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -23,20 +27,32 @@ body {background-color: rgba(251, 251, 251, 255);}
         background-color: rgb(255, 255, 255);
         display: flex;
         flex-direction: column;
-        box-shadow: 0px 0px 10px 8px rgba(212, 210, 212, 0.35);
-        flex-grow: .75;
-        min-height: 50vh
-        
+        align-content: center;
+        flex-wrap: wrap;
+        box-shadow: 0px 0px 10px 8px rgba(212, 210, 212, 0.35); 
+        min-height: 25%;
+        min-width: 25%;
+        padding: 15px;
     }
 
 .button {
 border:none;
 color:rgb(255, 255, 255);
 background-color: rgb(19, 144, 222);    
-padding: 30px 20px;
+padding: 10px 15px;
 margin-top: 15px;
+margin-bottom: 15px;
+margin-left: 10px;
+margin-right: 10px;
 font-size: 20px;
 border-radius: 50px;
 cursor: pointer;
 box-shadow: 0px 0px 8px 6px rgba(212, 210, 212, 0.35);
+}
+
+
+input {
+    border: none;
+    border-bottom: solid 1px black;
+
 }
